--- a/HTML학습/02 컨텐츠태그/2. 목록태그.html
+++ b/HTML학습/02 컨텐츠태그/2. 목록태그.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <h1>목록 태그 학습하기</h1>
+    <h1>
+        <a href="../03 인라인태그/1. 링크태그.html">목록 태그 학습하기</a>
+    </h1>
 
     <section id="cart-list">
         <h2>장바구니 목록(순서가 중요하지 않음~엉망이 돼도 돼~)</h2>
@@ -43,8 +45,8 @@
              안 되고 br태그를 일단 넣어봅시다.<br>
             <hr>
             문단 구분은 hr을 씁니다. <br>
-            기본값은 회색선인데 그건 css로 고칩니다. <br>
-            hr, br 둘 다 단독으로 써도 되는 태그입니다. <br>
+            기본값은 회색선인데 디자인은 css로 고칩니다. <br>
+            hr, br는 빈 태그로 닫는 태그 없이 단독 사용. <br>
             
         </p>
     </article>
