--- a/HTML학습/02 컨텐츠태그/2. 목록태그.html
+++ b/HTML학습/02 컨텐츠태그/2. 목록태그.html
@@ -14,7 +14,7 @@
 
     <section id="cart-list">
         <h2>장바구니 목록(순서가 중요하지 않음~엉망이 돼도 돼~)</h2>
-        <ul>
+        <ul> <!-- unorderd list -->
             <li>우유</li>
             <li>양파</li>
             <li>치즈</li>
@@ -24,16 +24,15 @@
                 </ul>
         </ul>
     </section>
-
+<!-- li는 단독으로 사용 불가. ul이나 ol 하위로 무조건 들어가야 함
+     직속자식은 무조건 li, li의 자식은 ul, ol 가능 -->
     <section id="noodle recipe">
         <h2>라면 레시피(순서가 중요한 목록~순서 바뀌면 안 돼~)</h2>
-        <ol>
+        <ol> <!-- orderd list -->
             <li>물 끓이기</li>
             <li>면, 스프 넣기</li>
             <li>4분 후 맛있게 먹기</li>
         </ol>
-<!-- li는 단독으로 사용 불가. ul이나 ol 하위로 무조건 들어가야 함 -->
-<!-- 직속자식은 무조건 li, li의 자식은 ul, ol 가능 -->
     </section>
     
     <article>
