--- a/HTML학습/03 인라인태그/1. 링크태그.html
+++ b/HTML학습/03 인라인태그/1. 링크태그.html
@@ -12,18 +12,10 @@
     <!-- href는 필수 속성, 태그 사이에 텍스트를 넣어 링크를 검-->
     <!-- a태그는 인라인 속성이기 때문에 줄바꿈 안 됨 -->
     <a href="https://google.com" target="_blank">구글 링크</a>
-    <!-- target 속성 : 새탭에서 링크 띄움, 실시간 검증할 때 사용(우편번호 검색) -->
+    <!-- target 속성 : 새탭에서 링크 띄움, 실시간 검증할 때 사용(우편번호 검색, 로그인 중 보안 프로그램 설치 등) -->
     <a href="../02 컨텐츠태그/2. 목록태그.html">목록태그 학습 페이지</a>
     <!-- 상대 경로, ../ 상위 폴더로 가기, ./ 하위 폴더로 가기(생략 가능)-->
 
-    <!-- 
-        자식 관계 블록-인라인 O, 인라인-인라인 O
-                 *인라인-블록X*
-        h태그(블록태그)의 자식으로 a태그(인라인태그)를 건다
-    <h1>
-        <a href="../03 인라인태그/1. 링크태그.html">목록 태그 학습하기</a>
-    </h1>
-    -->
     <a href="tel:+82102749256">문의전화</a>
     <!-- 전화걸기 +82: 국가번호, 10: 010, 모바일 페이지 -->
     <a href="mailto:sokoving@gmail.com"></a>
@@ -35,6 +27,15 @@
             반가워요~~ 오늘은 수요일!
         </p>
     </div>
+
+    <h2>
+        <a href="http://www.naver.com">네이버로 시작해요~</a>
+    </h2>
+    <!-- h태그에 a태그 걸기
+        자식 관계 블록-인라인 O, 인라인-인라인 O
+                 *인라인-블록X*
+        h태그(블록태그)의 자식으로 a태그(인라인태그)를 건다
+    -->
 
     <a href="#top">위로 이동</a>
     <!--#id, id의 영역으로 감
