--- a/HTML학습/02 컨텐츠태그/2. 목록태그.html
+++ b/HTML학습/02 컨텐츠태그/2. 목록태그.html
@@ -15,7 +15,7 @@
     <section id="cart-list">
         <h2>장바구니 목록(순서가 중요하지 않음~엉망이 돼도 돼~)</h2>
         <ul> <!-- unorderd list -->
-            <li>우유</li>
+            <li>우유</li> <!-- list item-->
             <li>양파</li>
             <li>치즈</li>
                 <ul>
@@ -48,6 +48,18 @@
             hr, br는 빈 태그로 닫는 태그 없이 단독 사용. <br>
             
         </p>
+
+        <pre>
+           pre는 요소가 표시될 때
+           모든 공백과 줄 바꿈을 유지하는
+
+           HTML태그로     이 시를   감싼다.
+
+
+
+
+           ^^
+        </pre>
     </article>
 </body>
 </html>
