--- a/HTML학습/03 인라인태그/1. 링크태그.html
+++ b/HTML학습/03 인라인태그/1. 링크태그.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!-- 한글(영어를 제외한 모든 언어) 깨지지 않게 함-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- 적응형 웹, 접속하는 방식(모바일, 모바일 기기, 웹)에 따라 바뀜-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 반응형 웹, 접속 기기에 맞춰 바뀜-->
-    <title>Document</title> <!-- 탭 이름으로 뜸-->
+    <title>Home</title> <!-- 탭 이름으로 뜸-->
 </head>
 <body>
     
