--- a/HTML학습/03 인라인태그/2. 강조태그.html
+++ b/HTML학습/03 인라인태그/2. 강조태그.html
@@ -29,20 +29,25 @@
         <!-- abbr 주로 약어를 처리할 때 쓰는 강조태그 
             밑에 실선의 디자인은 css로-->
     </h1>
-<!-- 강조 태그:기본 스타일은 상관없다(css로 수정 가능)-->
+<!-- 강조 태그:기본 스타일은 상관없다(css로 수정 가능)
+        span < b < mark < em < strong 순서로 강조가 세지나?-->
     <p>
         1절 동해 물과 <mark>백두산</mark>이 마르고 닳도록
         하느님이 보우하사 우리나라 만세. <br>
-
+        <!-- mark: 사용자의 관심을 하이라이팅 -->
         2절 남산 위에 저 <strong>소나무</strong>, 철갑을 두른 듯
         바람 서리 불변함은 우리 기상일세. <br>
-
+        <!-- strong: 아주 높은 중요도를 가진 곳 표시 -->
         3절 <em>가을 하늘</em> 공활한데 높고 구름 없이
         밝은 달은 우리 가슴 일편단심일세. <br>
-
+        <!-- em: 단순 의미 강조.
+                 중첩이 가능하며 중첩될수록 더 강조됨
+                 정보통신 보조기기에서 강하게 발음됨 -->
         4절 이 기상과 맘으로 충성을 다하여
         괴로우나 즐거우나 <b>나라 사랑하세.</b> <br>
-        
+        <!-- b: 독자의 주의 끌기.
+                요약 키워드, 리뷰의 제품명 등
+                특별히 중요하지는 않지만 굵게 표시 -->
         후렴 <span>무궁화</span> 삼천리 화려 강산 대한 사람, 대한으로 길이 보전하세
         <!-- span은 구조적 의미에서는 강조의 뜻 없음. 
             블록에는 div, 인라인에는 span-->
