--- a/HTML학습/06 입력양식.html/4.label, textarea태그.html
+++ b/HTML학습/06 입력양식.html/4.label, textarea태그.html
@@ -14,6 +14,11 @@
         # 이름 : <input type="text"> <br>
         </label>
 
+        <label>
+            <input type="checkbox"> 자동 로그인
+        </label>
+
+        <br>
                     <!-- 방법 2-->
         <input type="checkbox" id="remember"> 
         <label for="remember"> 아이디 기억하기 </label>
@@ -21,8 +26,8 @@
         <br>
 
         <textarea cols="20" rows="5"></textarea>
-<!-- col(column, 열, 기둥) cols="20" > 알파벳 20개가 한 줄
-     row(행, 줄) rows="5" > 기본 5줄, 이상은 스크롤 -->
+<!-- col(column, 열, 기둥, 세로) cols="20" > 알파벳 20개가 한 줄
+     row(행, 가로) rows="5" > 기본 5줄, 이상은 스크롤 -->
     </form>
 
 </body>
@@ -31,8 +36,8 @@
 <!-- 
     label
     사용자의 편의성을 높이기 위함
-    label로 묶어 정확한 input 칸을 클릭 안 해도 되게 함
+    label로 영역을 묶어 정확한 input 칸을 클릭 안 해도 되게 함
 
     input : 빈 태그
-    textarea : 빈 태그 아님
+    textarea : 빈 태그 X
  -->
