--- a/HTML학습/06 입력양식.html/5.select태그.html
+++ b/HTML학습/06 입력양식.html/5.select태그.html
@@ -14,8 +14,9 @@
             <optgroup label="Coffee">     <!-- 커피와 주스를 각각 라벨을 붙여서 그룹화함-->
             <option>Americano</option>
             <option selected>Caffe Latte</option> <!--selected 초기 선택-->
-            <option disabled>Capuccino</option> <!-- disabled 선태 불가-->
+            <option disabled>Capuccino(Sold out)</option> <!-- disabled 선태 불가-->
             </optgroup>
+
             <optgroup label="Juice">
             <option>Orange Juice</option>
             <option>Lime Juice</option>
