--- a/HTML학습/01 요소성질/2.인라인요소.html
+++ b/HTML학습/01 요소성질/2.인라인요소.html
@@ -32,5 +32,12 @@
     <em>인라인 요소는 가로세로 크기 지정이 불가능합니다.</em>
     <a href="http://www.naver.com">네이버 링크</a>
     
+     
+
+    <p>
+        &nbsp;는 스페이스 표시~
+        &ltdiv&gt태그는 아무 의미가 없는 블록요소입니다.
+    </p>
+
 </body>
 </html>
