--- a/CSS학습/02 선택자/1.전체선택자, 태그선택자.html
+++ b/CSS학습/02 선택자/1.전체선택자, 태그선택자.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <style>
-/* 전체선택자 '*' (all, 모든 것) */
+/* 전체선택자 * (all, 모든 것) */
         * {
             font-family: cursive;
         }
