--- a/CSS학습/02 선택자/2.클래스, 아이디, 그룹선택자.html
+++ b/CSS학습/02 선택자/2.클래스, 아이디, 그룹선택자.html
@@ -29,7 +29,7 @@
         .shadow { /*음영*/
             text-shadow: 2px 2px 2px gray;
         }
-/* 선택자를 , 로 구분해서 동시 적용 가능 */
+/* 그룹선택자 : 선택자를 , 로 구분해서 동시 적용 가능 */
         p,span {       /* 태그와 태그 */
             font-style: italic;
         }
@@ -38,9 +38,8 @@
             font-weight: normal;
         }
 
-        .orang,#big{ /*클래스와 아이디*/
+        /* .orang,#big 클래스와 아이디*/
            
-        }
 
     </style>
 
