--- a/CSS학습/05 박스 속성/2.속성/8.실습2.html
+++ b/CSS학습/05 박스 속성/2.속성/8.실습2.html
@@ -5,13 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 
+    <style>
+
+        h1 {
+            font-size: 2em;
+            font-weight: bold;
+            margin: 20px;       /*박스와 박스 사이 공간 두기*/
+            /* background: pink;    영역을 눈으로 확인하며 작업 */
+        }
+
+        .menu {
+            background: lightgray;
+            width: 80%;
+            margin-left: 10px;
+            padding: 10px;
+        }
+
+        .menu h2 {
+            /* background: orange; */
+            font-size: 1.2em;
+            margin: 20px 0;
+            padding: 8px;
+            width: fit-content;  /*가로 길이를 컨텐츠에 맞춤*/
+
+        }
+
+        .menu h2 a {
+            color: white;
+            font-weight: bold;
+        /*a 태그 밑줄 제거*/
+            text-decoration: none;
+        /*텍스트 음영: x축 y축 그림자길이 블러크기 색상 */
+            text-shadow: 2px 2px 10px black;
+            padding: 10px;
+        }
+
+        .menu h2 a:hover {
+            background: skyblue;
+            color: yellow;
+        }
+
+    </style>
 </head>
 <body>
     
-    <section>
-        
+    <h1>메뉴 만들기</h1>
+
+    <section class="menu">
+        <h2>
+            <a href="#">[주문] 긴급재난지원금을 쿠X에서 사용할 수 있나요?</a>
+        </h2>
+        <h2>
+            <a href="#">다슬기를 키우고 싶은데 어떤 환경이 필요하신가요?</a>
+        </h2>
+        <h2>
+            <a href="#">달팽이가 집을 나갔습니다. 어떻게 하죠?</a>
+        </h2>        
     </section>
 
 </body>
