--- a/CSS학습/08 레이아웃/1. float/3.중첩레이아웃.html
+++ b/CSS학습/08 레이아웃/1. float/3.중첩레이아웃.html
@@ -15,7 +15,7 @@
    >> html 구조적 문제가 있어 안 쓰는 게 좋음
  2. 부모 박스에 overflow: hidden; 추가
    >> 간단하긴 하지만 해당 기능을 필요할 때 못 쓴다.
- 3. 가상박스를 추가해 그 박스에 clear를 건다.
+ ★ 가상박스를 추가해 그 박스에 clear를 건다.★
     >해제 용도의 가상의 클래스(clearfix) 생성, clear를 건다.
     >해제하고 싶은 요소에 clearfix 클래스 부여
    >> 해제해야 할 게 많을 때 좋음                 */
