--- a/css_template_04/main.html
+++ b/css_template_04/main.html
@@ -10,15 +10,11 @@
     <!-- reset css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 
-    <!-- fontawesome css: https://fontawesome.com 
-        아이콘 외부 라이브러리
-         1. 서버 주소 연결 (인터넷으로 연결되어 있어야 함)
-         2. css파일은 다운받아 로컬 연결-->
+    <!-- fontawesome css: https://fontawesome.com -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 
 <body>
@@ -31,6 +27,7 @@
                         <img src="img/logo1.png" alt="메인 로고이미지">
                     </a>
                 </h1>
+
                 <nav class="gnb">
                     <ul>
                         <li><a href="#">회사소개</a></li>
@@ -47,7 +44,7 @@
                     </ul>
                 </nav>
 
-                <!-- 태블릿, 모바일 햄버거버튼(화면의 가로가 좁아지면 나온다)-->
+                <!-- 태블릿, 모바일 햄버거버튼 -->
                 <nav class="gnb-mobile">
                     <a href="#">
                         <i class="fas fa-bars"></i>
@@ -61,10 +58,11 @@
         <!-- section main -->
         <section class="main">
             <div class="main-title">
-                <h2 class="en">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium fugacommodi aliquam, mollitia illo non!
+                <h2 class="en">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium fugacommodi aliquam,
+                    mollitia illo non!
                     possimus eveniet impedit.</h2>
                 <p>창의적이고 경쟁력 있는 IT 선도기업</p>
-                <a href="#" class="view en">VIEW MORE <i class="fas fa-long-arrow-alt-right"></i></a>                
+                <a href="#" class="view en">VIEW MORE <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
         </section>
         <!-- //section main -->
@@ -72,7 +70,7 @@
         <!-- section.about -->
         <section class="about">
             <div class="title en">
-                <h2>ABOUT SOON9 Holdings<span>.</span></h2> 
+                <h2>ABOUT SOON9 Holdings<span>.</span></h2>
                 <p>대한민국 대표 IT기업, <br class="mo"> SOON9 Holdings를 소개합니다.</p>
             </div>
 
@@ -84,7 +82,7 @@
                         </div>
                         <div class="text">
                             <h3>회사소개</h3>
-                            <p>삶의 가치를 높이는 기업, SOON9 Holdings</p> 
+                            <p>삶의 가치를 높이는 기업, SOON9 Holdings</p>
                             <p class="more">more</p>
                         </div>
                     </a>
@@ -124,7 +122,7 @@
                 <div class="inner">
                     <h3 class="en">01<span>.</span> Chlorinated Polyvinyl Chloride</h3>
                     <div class="bottom clearfix">
-                        <p>우리 회사는 국내에서 처음으로 자체 기술로 CPVC를 생산하는데 성공하고 2017년 울산 2공장에 연산 3만톤 규모의 
+                        <p>우리 회사는 국내에서 처음으로 자체 기술로 CPVC를 생산하는데 성공하고 2017년 울산 2공장에 연산 3만톤 규모의
                             공장을 건설해 생산 중입니다.</p>
                         <a href="#">제품상세보기</a>
                     </div>
